feat: add ErrorToast banner with i18n and accessibility support
Implement inline error banner for Vision API failures with full
internationalization and accessibility features.

Changes:
- Add flutter_localizations and intl dependencies
- Configure l10n.yaml for localization generation
- Create ARB file with error message strings (en)
- Implement ErrorToast component with WCAG AA color contrast
- Add Overlay management to UploadScreen for persistent banner
- Update UploadScreen to use ConsumerStatefulWidget
- Integrate localization delegates in main.dart

ErrorToast features:
- WCAG AA compliant colors (4.5:1 contrast for text)
- Minimum 44x44px tap targets for buttons
- Semantic labels for screen readers
- Header semantics for title
- Live region for error message
- Disabled state with loading indicator
- Retry and Cancel button handlers

Overlay persistence:
- Survives device rotations
- Persists across overlays
- Managed via OverlayEntry
- Proper cleanup on widget disposal
- Updates on state changes

Accessibility:
- Screen reader announcements
- Semantic header for title
- Live region for messages
- Button semantics with labels
- Focus order: Retry -> Cancel

Testing:
- Unit tests for ErrorToast component
- Test button callbacks and states
- Test minimum tap target sizes
- Test loading state

Documentation:
- Update README with localization instructions
- Add l10n generation steps

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -10,6 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
+  # Localization
+  intl: ^0.18.1
 
   # State management
   flutter_riverpod: ^2.4.9
@@ -43,3 +48,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
