--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -29,10 +29,15 @@ dependencies:
   # Firebase
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_analytics: ^10.7.4
+  firebase_remote_config: ^4.3.8
 
   # Utilities
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  crypto: ^3.0.3
+  logger: ^2.0.2
 
 dev_dependencies:
   flutter_test:
